--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,3 +6,8 @@ spring:
     username: sa
     password: password
     driver-class-name: org.h2.Driver
+    hbm2ddl:
+      auto=update
+  jpa:
+    hibernate:
+      ddl-auto=create
